<resources>
    <string name="app_name">AniLore</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_desc">Login for better experience</string>
    <string name="forget_password"><u>Forget password?</u></string>
    <string name="dont_have_acc">Dont have account?</string>
    <string name="sign_up"><u><b>Sign Up</b></u></string>
    <string name="or_login_with">Or login with</string>
    <string name="permission_register">By creating an account you must agree with <u><b><font color="#FE0078">Our Terms and Conditions</font></b></u></string>
    <string name="register_txt"><b>Register</b></string>
    <string name="register_desc">Register for better experience</string>
    <string name="already_have_acc">Already have account?</string>
    <string name="login_bold"><u><b>Login</b></u></string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="log_out">Log out</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="synopsis">Synopsis :</string>
    <string name="release">Release</string>
    <string name="rating">Rating</string>
    <string name="episode">Episode</string>
    <string name="sample_year">xxxx</string>
    <string name="sample_episode">x</string>
    <string name="sample_score">x.xx</string>

    <string name="gretings_ohayou">Ohayou,</string>
    <string name="greetings_name">Lorem</string>
    <string name="greetings_formality">-san!</string>
    <string name="greetings_desc">Check out the anime we recommend for you</string>
    <string name="new_anime_txt">New Anime?</string>
    <string name="new_anime_desc">Find anime that are currently hits!</string>

    <string name="user_profile">Lorem Ipsum</string>
    <string name="premium_status">Premium</string>
    <string name="settings">Settings</string>
    <string name="become_member">Become member</string>
    <string name="theme">Theme</string>
    <string name="about_us">About us</string>

    <string-array name="onboarding_title">
        <item>Akses ke Ribuan Anime</item>
        <item>Streaming Berkualitas Tinggi</item>
        <item>Pengalaman Tanpa Iklan</item>
        <item>Komunitas Penggemar Anime</item>
    </string-array>

    <string-array name="onboarding_description">
        <item>Nikmati akses tak terbatas ke ribuan judul anime dari berbagai genre</item>
        <item>Nikmati pengalaman menonton yang optimal dengan streaming berkualitas tinggi</item>
        <item>Tidak ada gangguan iklan yang mengganggu saat menonton anime favorit Anda.</item>
        <item>Bergabunglah dengan komunitas penggemar anime kami di aplikasi ini.</item>
    </string-array>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>