<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/blue_191C44">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">


            <ImageView
                android:id="@+id/logo_mini"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/anilore_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                app:layout_constraintTop_toBottomOf="@id/logo_mini"
                tools:layout_editor_absoluteX="2dp"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/ohayou_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:fontFamily="@font/medium"
                    android:text="@string/gretings_ohayou"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/name_greeting"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:fontFamily="@font/medium"
                    android:text="@string/greetings_name"
                    android:textColor="@color/white"
                    android:textSize="30sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/greetings_desc"
                    android:textColor="@color/white"
                    android:fontFamily="@font/regular"/>


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_horizontal_item"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginTop="160dp"
                android:background="@drawable/rounded_1"
                app:layout_constraintTop_toTopOf="@id/logo_mini"
                tools:layout_editor_absoluteX="8dp"
                tools:listitem="@layout/rv_horizontal_item_top_anime" />

            <LinearLayout
                android:id="@+id/new_anime_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/rv_horizontal_item"
                android:layout_marginTop="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:fontFamily="@font/medium"
                    android:text="@string/new_anime_txt"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/new_anime_desc"
                    android:textColor="@color/white"
                    android:fontFamily="@font/regular"/>


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_vertical_item"
                android:layout_width="match_parent"
                android:layout_height="3300dp"
                android:layout_marginVertical="12dp"
                android:layout_marginTop="120dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/new_anime_text"
                app:spanCount="2"
                tools:layout_editor_absoluteX="-7dp"
                tools:listitem="@layout/rv_vertical_item_season_anime" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingVertical="2dp"

        android:background="@drawable/bottom_navbar_background"
        app:menu="@menu/bottom_navbar_menu"
        app:itemIconSize="40dp"
        app:itemIconTint="@drawable/bottom_navbar_selector"
        app:itemRippleColor="@color/transparent"
        app:labelVisibilityMode="unlabeled"/>

</androidx.constraintlayout.widget.ConstraintLayout>